remove spawn books

--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -1958,7 +1958,7 @@ machine {
 
 misc {
     # Give new players a copy of the NC guidebook after logging in?
-    B:give_guidebook=true
+    B:give_guidebook=false
 
     # Combine all creative tabs into a single large one?
     B:single_creative_tab=false
