--- a/config/OverLast/OverLast.cfg
+++ b/config/OverLast/OverLast.cfg
@@ -20,7 +20,7 @@ client {
     S:barPositions=top left
 
     # Whether to enable low sanity visual effects,may conflict with other mods.
-    B:enableEffect=false
+    B:enableEffect=true
 
     # Whether to enable low sanity sound effects,may conflict with other mods.
     B:enableSound=true
@@ -82,6 +82,7 @@ custom {
 
     # Hide the evolution bar of the specified phase. (eg: -1,0,3)
     I:hideUI <
+      -2
      >
 
     # Effects of potions given to low sanity under ParasitesInfection status. (eg: minecraft:id;duration;amplifier;parasites)
@@ -184,7 +185,7 @@ mechanics {
     D:sanityScale=1.0
 
     # If set to true, the natural evolution bar will only be displayed when holding a dirty clock.
-    B:showRequestDirtyClock=false
+    B:showRequestDirtyClock=true
 
     # The rate at which a player heats up and cools down.
     # Min: 0.1
