--- a/config/OverLast/OverLast.cfg
+++ b/config/OverLast/OverLast.cfg
@@ -156,7 +156,7 @@ mechanics {
     B:enableParasitic=true
 
     # For the features provided by the modpacks, the modpacks author is able to customize the radio text through the resource pack.
-    B:enableRadio=true
+    B:enableRadio=false
 
     # Whether to enable the sanity mechanic.
     B:enableSanity=true
